# skunkworks

./: .bazelrc  .bazelrc.swp  .gitignore  Makefile  README.md  WORKSPACE  gaga  gaga.cc  gaga.cc~  mkdocs.yml  requirements.txt  vars.mk
admin-cmd-srvc/src/usecase/: BUILD.bazel  create_user.cc  create_user.h  find_user.cc  find_user.h
admin-cmd-srvc/test/usecase/: BUILD.bazel  create_user.cc  find_user.cc
admin-cmd-srvc/user/: BUILD.bazel  email.cc  email.h  email_test.cc  family_name.cc  family_name.h  family_name_test.cc  given_name.cc  given_name.h  given_name_test.cc  identifier.cc  identifier.h  identifier_test.cc  lang.cc  lang.h  lang_test.cc  password.cc  password.h  password_test.cc  token.cc  token.h  token_test.cc  user.cc  user.h  user_test.cc  username.cc  username.h  username_test.cc
admin-cmd-srvc/user/value_types/: BUILD.bazel  email.cc  email.h  email_test.cc  family_name.cc  family_name.h  family_name_test.cc  given_name.cc  given_name.h  given_name_test.cc  identifier.cc  identifier.h  identifier_test.cc  lang.cc  lang.h  lang_test.cc  password.cc  password.h  password_test.cc  status.cc  status.h  token.cc  (+5 more)
data_model/: BUILD.bazel  adapter.cc  adapter.h  agent.cc  agent.h  agent_test.cc  all_properties.h  class_obj.cc  class_obj.h  class_obj_test.cc  configuration.cc  configuration.h  data_model.cc  data_model.h  data_model_test.cc  domain_model.cc  domain_model.h  domain_model_test.cc  generic_object_description.h  in_mem_kv_store.cc  in_mem_kv_store.h  in_mem_kv_store_test.cc  in_mem_store.h  json_adapter.cc  json_adapter.h  json_mem_kv_store_adapter.cc  json_mem_kv_store_adapter.h  json_mem_kv_store_adapter_test.cc  json_project.cc  json_project.h  json_serializer.cc  json_serializer.h  key_value_store.cc  key_value_store.h  kv_json_store.cc  kv_json_store.h  kv_store.h  model_item.cc  model_item.h  model_item_test.cc  (+13 more)
data_model/properties/: bitstream_property.h  boolean_property.h  color_property.h  date_property.h  decimal_property.h  geometry_property.h  geoname_property.h  icon_class_property.h  integer_property.h  interval_property.h  link_property.h  markup_text_property.h  simple_text_property.h  uri_property.h
data_model/values/: BUILD.bazel  base_value.cc  base_value.h  base_value_test.cc  simple_text_value.cc  simple_text_value.h  value_test.cc
entities/: BUILD.bazel  Property.cc  Property.cpp  Property.h  ResourceClass.cc  ResourceClass.h  ValueClass.cc  ValueClass.h  agent.cc  agent.h  class_obj.cc  class_obj.h  configuration.cc  configuration.h  data_model.cc  data_model.h  entities_catch2_test.cc  entities_test.cc  error.cc  error.h  main.cc  project.cpp  project.h  project_data_model.cc  project_data_model.h  property.cc  property.h  resource_class.cc  resource_class.h  value_class.cc  value_class.h
entities/user/: BUILD.bazel  email.h  email_test.cc  family_name.cc  family_name.h  family_name_test.cc  given_name.cc  given_name_test.cc  identifier.cc  identifier_test.cc  lang.cc  lang.h  lang_test.cc  password.h  password_test.cc  token.cc  token_test.cc  user.cc  user.cpp  user.h  user_test.cc  username.cc  username.h  username_test.cc
entities/values/: BUILD.bazel  agent.cc  agent.h  base_value.cc  base_value.h  simple_text_value.cc  simple_text_value.h  value.cc  value.h  value_test.cc
ext/: BUILD  BUILD.bazel  lua.BUILD
ext/curl/: BUILD.bazel
ext/file/: BUILD.bazel
ext/jansson/: BUILD.bazel
ext/jwt/: BUILD.bazel
ext/lua/: BUILD.bazel
ext/openssl/: BUILD.bazel
ext/sole/: BUILD.bazel
ext/sqlite3/: BUILD.bazel
ext/zlib/: BUILD.bazel
helpers/: BUILD.bazel  Error.cc  Error.h  error.cc  error.h  h_tree_node.h  test  uuid.cc  uuid.h
helpers/xsd_types/: BUILD.bazel  data_type.h  date_time.cc  date_time.h  date_time_stamp.cc  date_time_stamp.h  error.cc  error.h  lang_string.cc  lang_string.h  others.h  splitter.cc  splitter.h  types.spec  types.spec.cc  xsd.h  xsd_any_uri.cc  xsd_any_uri.h  xsd_boolean.cc  xsd_boolean.h  xsd_data_type.h  xsd_date_time.cc  xsd_date_time.h  xsd_date_time_stamp.cc  xsd_date_time_stamp.h  xsd_decimal.cc  xsd_decimal.h  xsd_error.h  xsd_int.cc  xsd_int.h  xsd_integer.cc  xsd_integer.h  xsd_language.h  xsd_normalized_string.cc  xsd_normalized_string.h  xsd_q_name.cc  xsd_q_name.h  xsd_restriction.h  xsd_string.h  xsd_token.cc  (+2 more)
shared/dsp_types/: BUILD.bazel  dsp_types_test.cc  email.cc  email.h  email_test.cc  family_name.cc  family_name.h  family_name_test.cc  given_name.cc  given_name.h  given_name_test.cc  id.cc  id.h  id_test.cc  identifier.cc  identifier.h  identifier_test.cc  lang.cc  lang.h  lang_test.cc  password.cc  password.h  password_test.cc  shortcode.cc  shortcode.h  shortcode_test.cc  shortname.cc  shortname.h  shortname_test.cc  status.cc  status.h  status_test.cc  token.cc  token.h  token_test.cc  username.cc  username.h  username_test.cc
shared/error/: BUILD.bazel  error.cc  error.h  error_test.cc
shared/generic_object_description/: BUILD.bazel  generic_object_description.cc  generic_object_description.h  generic_object_description_test.cc
shttps/: BUILD.bazel  CMakeLists.txt  ChunkReader.cpp  ChunkReader.h  Connection.cpp  Connection.h  Error.cpp  Error.h  Global.h  Hash.cpp  Hash.h  LuaServer.cpp  LuaServer.h  LuaSqlite.cpp  LuaSqlite.h  Parsing.cpp  Parsing.h  Server.cpp  Server.h  Shttp.cpp  SipiError.cpp  SipiError.h  SockStream.cpp  SockStream.h  SocketControl.cpp  SocketControl.h  ThreadControl.cpp  ThreadControl.h  shttps.config.lua
shttps/docroot/: exit.lua  gaga.lua  gugus.elua  post.elua  send-file.html  send-form.html
shttps/scripts/: test1.lua  test2.lua
tests/: BUILD.bazel  my_test.cc  test_main.cc
tests/catch2/: BUILD.bazel
tests/catch2_example/: BUILD.bazel  catch2_example_test.cc
tests/nlohmann_json/: BUILD.bazel  nlohmann_json_test.cc
tests/protobuf/: BUILD.bazel  address.proto  person.proto  zip_code.proto
tests/rocksdb_example/: BUILD.bazel  rocksdb_example.cc
tests/stduuid/: BUILD.bazel  stduuid_test.cc
toolchain/: BUILD.bazel  cc_toolchain_config.bzl  compiler.BUILD
toolchains/: BUILD.bazel  cc_toolchain_config.bzl
(+67 files in other folders)
