load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "data_model",
    srcs = [
        "in_mem_kv_store.cc",
        "json_mem_kv_store_adapter.cc",
        "data_model.cc",
        "project.cc",
        "agent.cc",
        "class_obj.cc",
        "property.cc",
        "resource_class.cc",
    ],
    hdrs = [
        "kv_store.h",
        "in_mem_kv_store.h",
        "store_adapter.h",
        "json_mem_kv_store_adapter.h",
        "observer.h",
        "subject.h",
        "domain_model.h",
        "model_item.h",
        "data_model.h",
        "project.h",
        "agent.h",
        "class_obj.h",
        "property.h",
        "resource_class.h",
    ],
    deps = [
        "@nlohmann//:nlohmann",
        "//shared",
        "//shared/error",
        "//shared/xsd_types",
        "//shared/dsp_types:identifier",
        "//shared/dsp_types:shortcode",
        "//shared/dsp_types:shortname",
    ],
)

cc_test(
  name = "model_item_test",
  srcs = ["model_item_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "class_obj_test",
  srcs = ["class_obj_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "agent_test",
  srcs = ["agent_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "project_test",
  srcs = ["project_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "data_model_test",
  srcs = ["data_model_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "property_test",
  srcs = ["property_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "resource_class_test",
  srcs = ["resource_class_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "in_mem_kv_store_test",
  srcs = ["in_mem_kv_store_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "json_mem_kv_store_adapter_test",
  srcs = ["json_mem_kv_store_adapter_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)

cc_test(
  name = "domain_model_test",
  srcs = ["domain_model_test.cc"],
  deps = [
      ":data_model",
      "@nlohmann//:nlohmann",
      "@catch2//:catch2_with_main",
  ],
)
