load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "entities_test",
    srcs = ["entities_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "//entities",
        "@gtest//:main"
    ],
)

cc_library(
    name = "entities",
    srcs = [
        "property.cc",
        "resource_class.cc",
        "value_class.cc",
    ],
    hdrs = [
        "property.h",
        "resource_class.h",
        "value_class.h",
    ],
    deps = [
        "//helpers:helpers",
    ],
)
