load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
  name = "entities_test",
  srcs = ["entities_test.cc"],
  size = "small",
  deps = [
      ":entities",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)


cc_library(
    name = "error",
    srcs = ["error.cc"],
    hdrs = ["error.h"],
    deps = [],
)

cc_library(
    name = "entities",
    srcs = [
        "property.cc",
        "resource_class.cc",
        "value_class.cc",
    ],
    hdrs = [
        "property.h",
        "resource_class.h",
        "value_class.h",
    ],
    deps = [
        ":error",
        "//helpers:uuid",
        "//helpers:helpers",
        "//helpers/xsd_types",
    ],
)
