load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_test(
  name = "my_test",
  srcs = ["my_test.cc"],
  deps = [
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)

cc_library(
  name = "test_main",
  srcs = ["test_main.cc"],
  deps = [
      "@catch2//:catch2"
  ],
)
