load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "user",
    srcs = ["user.cc"],
    hdrs = ["user.h"],
    deps = [
        "//admin-cmd-srvc/user/value_types:email",
        "//admin-cmd-srvc/user/value_types:family_name",
        "//admin-cmd-srvc/user/value_types:given_name",
        "//admin-cmd-srvc/user/value_types:identifier",
        "//admin-cmd-srvc/user/value_types:lang",
        "//admin-cmd-srvc/user/value_types:password",
        "//admin-cmd-srvc/user/value_types:status",
        "//admin-cmd-srvc/user/value_types:token",
        "//admin-cmd-srvc/user/value_types:username",
        "//shared/error",
        "//shared/xsd_types",
    ],
)

cc_test(
  name = "user_test",
  srcs = ["user_test.cc"],
  size = "small",
  deps = [
      ":user",
      "//admin-cmd-srvc/user/value_types:email",
      "//admin-cmd-srvc/user/value_types:family_name",
      "//admin-cmd-srvc/user/value_types:given_name",
      "//admin-cmd-srvc/user/value_types:identifier",
      "//admin-cmd-srvc/user/value_types:lang",
      "//admin-cmd-srvc/user/value_types:password",
      "//admin-cmd-srvc/user/value_types:status",
      "//admin-cmd-srvc/user/value_types:token",
      "//admin-cmd-srvc/user/value_types:username",
      "//shared/error",
      "//shared/xsd_types",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)
