load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "values",
    srcs = [
        "base_value.cc",
    ],
    hdrs = [
        "base_value.h",
    ],
    deps = [
        "//data_model",
        "//shared/xsd_types",
    ],
)

cc_test(
  name = "base_value_test",
  srcs = ["base_value_test.cc"],
  deps = [
      ":values",
      "@catch2//:catch2_with_main",
  ],
)
