load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "user",
    srcs = ["user.cpp"],
    hdrs = ["user.h"],
    deps = [
        "//entities/user/values",
        "//entities:error",
        "//helpers",
        "//helpers/xsd_types"
    ],
)

cc_test(
  name = "user_test",
  srcs = ["user_test.cc"],
  size = "small",
  deps = [
      ":user",
      "//entities/user/values",
      "//entities:error",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)
