load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "user",
    srcs = ["user.cpp"],
    hdrs = ["user.h"],
    deps = [
        ":username",
        "//entities:error",
        "//helpers",
        "//helpers/xsd_types",
    ],
)

cc_test(
  name = "user_test",
  srcs = ["user_test.cc"],
  size = "small",
  deps = [
      ":user",
      ":username",
      "//entities:error",
      "//helpers/xsd_types",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)

cc_library(
    name = "username",
    srcs = ["username.cc"],
    hdrs = ["username.h"],
    deps = [
        "//entities:error",
        "//helpers/xsd_types"
    ],
)

cc_test(
  name = "username_test",
  srcs = ["username_test.cc"],
  size = "small",
  deps = [
      ":username",
      "//entities:error",
      "//helpers/xsd_types",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)
