load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])


cc_library(
    name = "values",
    srcs = [
        "agent.cc",
        "value.cc"
    ],
    hdrs = [
        "agent.h",
        "value.h"
    ],
    deps = [
        "//helpers/xsd_types",
    ],
)
