load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")
package(default_visibility = ["//visibility:public"])

# build sqlite
configure_make(
    name = "curl",
    configure_options = [
        "--disable-ldap",
        # "--enable-shared",
        "--enable-static",
        "--without-libidn2",
    ],
    lib_source = "@curl//:all",
    static_libraries = ["libcurl.a"],
)
