package(default_visibility = ["//visibility:public"])

# build JWT from local source
cc_library(
    name = "jwt",
    srcs = [
        "jwt.c",
    ],
    hdrs = [
        "jwt.h"
    ],
    deps = [
        "//ext:jansson",
        "//ext:openssl",
        # "@openssl//:ssl",
    ],
    linkstatic = True, # only create static libraries
)
